<resources>
    <string name="app_name">Rumah Qur\'an Online</string>
    <string name="login">Masuk</string>
    <string name="assalamu_alaikum_wr_wb_silahkan_daftarkan_n_informasi_anda_untuk_mengakses_akun">Assalamu\'alaikum Wr Wb. Silahkan daftarkan\n informasi Anda untuk mengakses akun</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password</string>
    <string name="or_sign_in_with">atau masuk dengan</string>
    <string name="dont_have_acc">Belum punya akun? Masuk disini</string>
    <string name="register">Daftar</string>
    <string name="assalamu_alaikum_wr_wb_silahkan_daftarkan_n_informasi_anda_untuk_mengakses_acc">Assalamu\'alaikum Wr Wb. Silahkan daftarkan\n informasi Anda untuk mengakses akun</string>
    <string name="input_username">Masukan Username</string>
    <string name="input_confirm_password">Konfirmasi Password</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="call_to_prayer_time">Waktu Adzan</string>
    <string name="shubuh">Shubuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="study_materials">Materi\nBelajar</string>
    <string name="quot_barangsiapa_yang_meninggalkan_sholat_maka_ia_telah_kafir_quot_n_hr_ahmad_abu_daud_at_tirmidzi_an_nasai_dan_ibnu_majah">\"Barangsiapa yang meninggalkan sholat maka ia telah kafir\"\n (HR. Ahmad, Abu Daud, At-Tirmidzi, An-Nasai dan Ibnu Majah)</string>
    <string name="gerakkan_untuk_menyesuakan_arah_kiblat">Gerakkan untuk menyesuakan arah kiblat</string>
    <string name="al_qur_an">Al-Qur’an</string>
    <string name="surah">Surat</string>
    <string name="juz">Juz</string>
    <string name="profile">Profile</string>
    <string name="edit_profile_photo">Edit Foto Profil</string>
    <string name="biodata">Biodata</string>
    <string name="edit_username">Username</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="logout">Keluar</string>
    <string name="home">Home</string>
    <string name="compass">Compass</string>
    <string name="collection_of_prayers">Kumpulan\nDoa - Doa</string>
    <string name="setor_hafalan">Setor\nHafalan</string>
    <string name="sambung_ayat">Sambung\nAyat</string>
    <string name="find_location">Cari Lokasi</string>
    <string name="collection_of_short_prayers">Kumpulan Doa-Doa Singkat</string>
    <string name="prayer_before_sleeping">Doa Sebelum Tidur</string>
    <string name="with_your_name_ya_allah_I_live_and_die">Dengan nama-Mu ya Allah, aku hidup dan aku mati.</string>
    <string name="title_collection_prayer">Kumpulan Doa-Doa</string>
    <string name="wake_up_prayer">Doa Bangun Tidur</string>
    <string name="the_meaning_of_the_wake_up_prayer">Segala puji bagi-Mu, ya Allah, yang telah menghidupkan kembali diriku setelah kematianku, dan hanya kepada-Nya nantinya kami semua akan dihidupkan kembali</string>
    <string name="meal_prayer">Doa Makan</string>
    <string name="meaning_of_meal_prayer">Ya Allah, limpahkanlah keberkahan kepada kami atas apa yang telah Engkau rezekikan kepada kami, dan jauhkanlah kami dari siksa neraka</string>
    <string name="prayer_after_eating">Doa Setelah Makan</string>
    <string name="the_meaning_of_prayer_after_eating">Segala puji bagi Allah yang telah memberi kami makan dan telah memberi kami minum, serta telah menjadikan kami sebagai orang-orang Islam</string>
    <string name="sub_menu">Sub Menu</string>
    <string name="translate">Artinya:</string>
    <string name="title_setting">Pengaturan</string>
    <string name="user">Pengguna</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="more">More</string>
    <string name="help">Help</string>
    <string name="change_photo">Ganti Foto Profile</string>
    <string name="input_your_photo">Masukkan gambar profile baru Anda</string>
    <string name="rules_and_policies">Dengan melanjutkan, Anda setuju dengan Aturan dan\nKebijakan Perubahan Foto Profil.</string>
    <string name="rules">Aturan</string>
    <string name="policies">Kebijakan Perubahan</string>
    <string name="save">Simpan</string>
    <string name="input_your_change_password">Masukkan password baru kamu</string>
    <string name="change_password">Ganti Password</string>
    <string name="edit_new_password">Masukkan Password Baru</string>
    <string name="edit_new_konfirmasi_password">Masukkan Konfirmasi Password Baru</string>
    <string name="memorized_deposit">Setoran Hafalan</string>
    <string name="choose_teacher">Pilih Ustadz / Ustadzah</string>
    <string name="choose">Pilih</string>
    <string name="ustadz_or_ustadzah">Ustad / Ustadzah</string>
    <string name="guide_deposit">Paduan Setoran Hafalan Dan Konsultasi</string>
    <string name="rules_1">1. Sesi setoran hafalan per-orang berlangsung selama 10 menit.</string>
    <string name="rules_2">2. Hubungi guru melalui chat untuk membuat janji tempat dan waktu yang tepat untuk melakukan setoran hafalan.</string>
    <string name="rules_3">3. Pastikan siswa/i memiliki persiapan yang matang untuk melakukan setoran hafalan.</string>
    <string name="rules_4">4. Pastikan untuk mereview hafalan sebelum melakukan setoran untuk memastikan keakuratan dan kelancaran</string>
    <string name="rules_5">5. Jangan lupa untuk mencatat umpan balik dari guru serta perkembangan hafalan untuk memantau kemajuan secara berkala.</string>
    <string name="rules_6">6. Kamu bisa berkonsultasi dengan guru membahas apa saja yang ingin ditanyakan seputar pembelajaran islam.</string>
    <string name="anny_queation">Ada yang ingin ditanyakan ?</string>
    <string name="chat_teacher">Chat Guru</string>
    <string name="continue_the_verse">Sambung Ayat</string>
    <string name="choose_surah">Pilih Surat</string>
    <string name="materi_menu">Menu Materi</string>
    <string name="study_materi">Materi Belajar</string>
    <string name="add_category">Tambah\nKategori</string>
    <string name="upload_material">Unggah\nMateri</string>
    <string name="add_category_fragment">Tambah Kategori.</string>
    <string name="add_category_fragment2">Tambahkan kategori baru</string>
    <string name="input_category">Masukkan Kategori Baru</string>
    <string name="dont_have">Belum Punya?</string>
    <string name="enter_here">Masuk disini</string>
    <string name="upload_materi_fragment">Unggah Materi.</string>
    <string name="upload_materi_fragment2">Unggah Materi Baru</string>
    <string name="input_title">Masukkan Judul</string>
    <string name="pick_category">Pilih Kategori</string>
    <string name="input_author">Masukkan Penulis</string>
    <string name="input_content">Masukkan Materi</string>
    <string name="information_upload">Materi baru akan tersedia pada halaman materi dan\ndapat di akses oleh semua pengguna.</string>
    <string name="edit_old_password">Masukan Password Lama</string>
    <string name="about">Tentang</string>
    <string name="rqo">Rumah Quran Online</string>
    <string name="rq">Rumah Quran</string>
    <string name="online">Online</string>
    <string name="versi_2_0">Versi 2.0</string>
    <string name="upload_photo">Upload Foto Profile</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="periksa_email_anda_setelah_mengirim_email_untuk_nmendapatkan_tautan_untuk_mengatur_ulang_npassword_anda">Periksa Email Anda setelah mengirim Email untuk\nmendapatkan tautan untuk Mengatur Ulang\nPassword Anda.</string>
    <string name="email">Email</string>
    <string name="mengatur_ulang">Mengatur Ulang</string>
    <string name="email_terkirim">Email Terkirim</string>
    <string name="periksa_kotak_email_anda_untuk_petunjuk_mengubah_kata_sandi_ingat_selalu_kata_sandi_baru_anda_untuk_keamanan_akun">Periksa kotak email Anda untuk petunjuk\nmengubah kata sandi. Ingat selalu kata sandi\nbaru Anda untuk keamanan akun.</string>
    <string name="kembali_ke_masuk">Kembali ke Masuk</string>
    <string name="email_tidak_valid">Format email tidak valid!</string>
    <string name="password_tidak_valid">Password kurang dari 8 karakter!</string>
    <string name="password_tidak_sama">Password tidak sama!</string>
    <string name="username_tidak_boleh_kosong">Username tidak boleh kosong!</string>
</resources>