<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeTeacherFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/waktuAdzanTeacherFragment"
        android:icon="@drawable/ic_clock"
        android:title="@string/call_to_prayer_time" />

    <item
        android:id="@+id/compassTeacherFragment"
        android:title="@string/compass"
        android:icon="@drawable/ic_compass"/>

    <item
        android:id="@+id/alquranTeacherFragment"
        android:icon="@drawable/ic_book"
        android:title="@string/al_qur_an" />

    <item
        android:id="@+id/profileTeacherFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>