<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.detailguru.DetailGuruFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_setoran_hafalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustadz_or_ustadzah"
        android:textColor="@color/hitam"
        android:textSize="16sp"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name_guru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Coba Tebak?!"
        android:textSize="16sp"
        android:textColor="@color/hitam"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintTop_toBottomOf="@id/tv_setoran_hafalan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_telp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="+6281285664595"
        android:textColor="@color/hitam"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_guru" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_tipe_guru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="Guru Agama"
        android:textColor="@color/abu_abu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_telp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_jadwal_guru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="08.00 - 15.00 WIB (Senin - Jumat)"
        android:textColor="@color/abu_abu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tipe_guru" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_panduan_setoran_hafalan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guide_deposit"
        android:textSize="16sp"
        android:textColor="@color/hitam"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintTop_toBottomOf="@id/tv_jadwal_guru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rule1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:textSize="12sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_regular"
        android:text="@string/rules_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_panduan_setoran_hafalan"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rule2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_regular"
        android:text="@string/rules_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rule1"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rule3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_regular"
        android:text="@string/rules_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rule2"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rule4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_regular"
        android:text="@string/rules_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rule3"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rule5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_regular"
        android:text="@string/rules_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rule4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rule6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_regular"
        android:text="@string/rules_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rule5"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_ada_yang_ingin_ditanyakan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="42dp"
        android:textSize="14sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/inter_medium"
        android:text="@string/anny_queation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rule6"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_chat_guru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/chat_teacher"
        android:textColor="@color/putih"
        android:backgroundTint="@color/hijau_persian_700"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_ada_yang_ingin_ditanyakan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/pb_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>